Bug 30221 - X faild with Intel i810 B43 which is claimed device id driver does not support
Summary: X faild with Intel i810 B43 which is claimed device id driver does not support
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: 7.4 (2008.09)
Hardware: x86 (IA32) Linux (All)
: medium major
Assignee: Carl Worth
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-16 02:49 UTC by hychen
Modified: 2010-09-16 08:53 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
add addition device id for Intel Video Card (3.78 KB, patch)
2010-09-16 02:49 UTC, hychen
no flags Details | Splinter Review

Description hychen 2010-09-16 02:49:00 UTC
System environment: 
-- chipset:Intel  i810 B43 VGA board
-- system architecture: 32-bit
-- xf86-video-intel: 2.9.0
-- xserver: 7.4+3
-- mesa: 7.6.0
-- libdrm:2.4.14
-- kernel: 2.6.31-60
-- Linux distribution: Ubuntu GNU/Linux Karmic
-- Display connector: VGA

Reproducing steps:

Excepted result:

    Intel video driver is loaded successful and X wroks. 

Actually result:

   Itel's X driver can'tbe detected and used correctly and X runs on low resolution with VESA driver.

Additional info:

   lspci -n reports the device id for agp/video is 2e90/2e92 which is not in the list for xserver-intel driver, the device id in the driver is 2e40/2e42. 

  The attached patch added 2e90/2e92 in the detect function and It is basically works fine to me.
Comment 1 hychen 2010-09-16 02:49:49 UTC
Created attachment 38737 [details] [review]
add addition device id for Intel Video Card
Comment 2 Chris Wilson 2010-09-16 08:52:46 UTC
commit 55b5fe888002258dd863d41977bfbfcf1a922179
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Sep 16 16:50:13 2010 +0100

    Add alternate pci-id for B43
    
    Confirmed by http://en.wikipedia.org/wiki/Intel_GMA
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=30221
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 Chris Wilson 2010-09-16 08:53:02 UTC
And a similar patch queued for i915.ko


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.