Add alternate pci-id for B43

Confirmed by http://en.wikipedia.org/wiki/Intel_GMA

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=30221
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>